--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -4,94 +4,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://bit.ly/2VnXWr2\" width=\"100\" align=\"left\">"
+    "# Snail and well\n",
+    "\n",
+    "A snail falls at the bottom of a 125 cm well. Each day the snail rises 30 cm. But at night, while sleeping, slides 20 cm because the walls are wet. How many days does it take to escape from the well?\n",
+    "\n",
+    "TIP: http://puzzles.nigelcoldwell.co.uk/sixtytwo.htm"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Snail and the Well\n",
-    "\n",
-    "A snail falls at the bottom of a 125 cm well. Each day the snail rises 30 cm. But at night, while sleeping, slides 20 cm because the walls are wet. How many days does it take for the snail to escape the well?\n",
-    "\n",
-    "**Hint**: The snail gets out of the well when it surpasses the 125cm of height.\n",
-    "\n",
-    "## Tools\n",
-    "\n",
-    "1. Loop: **while**\n",
-    "2. Conditional statements: **if-else**\n",
-    "3. Function: **print()**\n",
-    "\n",
-    "## Tasks\n",
-    "\n",
-    "#### 1. Assign the challenge data to variables with representative names: `well_height`, `daily_distance`, `nightly_distance` and `snail_position`."
+    "## Solución"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign problem data to variables with representative names\n",
+    "# well height, daily advance, night retreat, accumulated distance\n",
+    "\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "\n",
+    "# Assign 0 to the variable that represents the solution\n",
+    "\n",
+    "days = 0\n",
+    "\n",
+    "# Write the code that solves the problem\n",
+    "\n",
+    "while accumulated_distance <= well_height:\n",
+    "    accumulated_distance += daily_advance\n",
+    "    days += 1\n",
+    "    if accumulated_distance <= well_height:\n",
+    "        accumulated_distance -= night_retreat\n",
+    "    else:\n",
+    "        \n",
+    "# Print the result with print('Days =', days)\n",
+    "\n",
+    "        print('Days =', days)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Create a variable `days` to keep count of the days that pass until the snail escapes the well. "
+    "## Goals\n",
+    "\n",
+    "1. Treatment of variables\n",
+    "2. Use of loop **while**\n",
+    "3. Use of conditional **if-else**\n",
+    "4. Print in console"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3. Find the solution to the challenge using the variables defined above. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4. Print the solution."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Bonus\n",
-    "The distance traveled by the snail each day is now defined by a list.\n",
+    "The distance traveled by the snail is now defined by a list.\n",
     "```\n",
     "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
     "```\n",
-    "On the first day, the snail rises 30cm but during the night it slides 20cm. On the second day, the snail rises 21cm but during the night it slides 20cm, and so on. \n",
+    "How long does it take to raise the well?\n",
     "\n",
-    "#### 1. How many days does it take for the snail to escape the well?\n",
-    "Follow the same guidelines as in the previous challenge.\n",
+    "What is its maximum displacement in one day? And its minimum?\n",
     "\n",
-    "**Hint**: Remember that the snail gets out of the well when it surpasses the 125cm of height."
+    "What is its average speed during the day?\n",
+    "\n",
+    "What is the standard deviation of its displacement during the day?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 5\n",
+      "Maximum daily displacement : 77 cm\n",
+      "Minimum daily displacement : 21 cm\n",
+      "Average daily progress : 41.0 cm\n",
+      "Standart deviation on displacement : 19.44222209522358 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "import numpy as np\n",
+    "\n",
+    "# Assign problem data to variables with representative names\n",
+    "# well height, daily advance, night retreat, accumulated distance\n",
+    "\n",
+    "well_height = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "\n",
+    "# Assign 0 to the variable that represents the solution\n",
+    "\n",
+    "days = 0\n",
+    "\n",
+    "# Write the code that solves the problem\n",
+    "\n",
+    "while accumulated_distance < well_height:\n",
+    "    for i in advance_cm:\n",
+    "        accumulated_distance += i\n",
+    "        days += 1\n",
+    "        if accumulated_distance < well_height:\n",
+    "            accumulated_distance -= night_retreat\n",
+    "        else:\n",
+    "            \n",
+    "# Print the result with print('Days =', days)\n",
+    "\n",
+    "            print('Days =', days)\n",
+    "            break\n",
+    "\n",
+    "# What is its maximum displacement in a day? And its minimum?\n",
+    "\n",
+    "print(\"Maximum daily displacement :\", max(advance_cm[:5]), \"cm\")\n",
+    "print(\"Minimum daily displacement :\", min(advance_cm[:5]), \"cm\")\n",
+    "\n",
+    "# What is its average progress?\n",
+    "\n",
+    "print(\"Average daily progress :\", sum(advance_cm[:5])/len(advance_cm[:5]), \"cm\")\n",
+    "\n",
+    "# What is the standard deviation of your displacement during the day?\n",
+    "\n",
+    "print(\"Standart deviation on displacement :\", np.std(advance_cm[:5]), \"cm\")"
    ]
   },
   {
@@ -100,42 +156,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2. What is its maximum displacement in one day? And its minimum? Calculate the displacement using only the travel distance of the days used to get out of the well. \n",
-    "**Hint**: Remember that displacement means the total distance risen taking into account that the snail slides at night.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3. What is its average progress? Take into account the snail slides at night."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4. What is the standard deviation of its displacement? Take into account the snail slides at night."
-   ]
   },
   {
    "cell_type": "code",
@@ -161,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
