--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -4,18 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://bit.ly/2VnXWr2\" width=\"100\" align=\"left\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Bus\n",
     "\n",
-    "This bus has a passenger entry and exit control system to monitor the number of occupants it carries and thus detect when there are too many.\n",
+    "This bus has a passenger entry and exit control system to monitor the number of occupants it carries and thus detect when there is too high a capacity.\n",
     "\n",
-    "At each stop, the entry and exit of passengers is represented by a tuple consisting of two integer numbers.\n",
+    "At each stop the entry and exit of passengers is represented by a tuple consisting of two integer numbers.\n",
     "```\n",
     "bus_stop = (in, out)\n",
     "```\n",
@@ -24,73 +17,138 @@
     "stops = [(in1, out1), (in2, out2), (in3, out3), (in4, out4)]\n",
     "```\n",
     "\n",
-    "## Tools\n",
-    "You don't necessarily need to use all the tools. Maybe you opt to use some of them or completely different ones, they are given to help you shape the exercise. Programming exercises can be solved in many different ways.\n",
-    "* Data structures: **lists, tuples**\n",
-    "* Loop: **while/for loops**\n",
-    "* Functions: **min, max, len**\n",
+    "## Goals:\n",
+    "* lists, tuples\n",
+    "* while/for loops\n",
+    "* minimum, maximum, length\n",
+    "* average, standard deviation\n",
     "\n",
-    "## Tasks"
+    "## Tasks\n",
+    "1. Calculate the number of stops.\n",
+    "2. Assign to a variable a list whose elements are the number of passengers at each stop (in-out),\n",
+    "3. Find the maximum occupation of the bus.\n",
+    "4. Calculate the average occupation. And the standard deviation.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bus stops : [(5, 0), (9, -2), (4, -6), (7, -2)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Variables\n",
-    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1. Calculate the number of stops."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2. Assign to a variable a list whose elements are the number of passengers at each stop (in-out).\n",
-    "Each item depends on the previous item in the list + in - out."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3. Find the maximum occupation of the bus."
+    "# variables\n",
+    "\n",
+    "bus_stop1 = (5, 0)\n",
+    "bus_stop2 = (9, -2)\n",
+    "bus_stop3 = (4, -6)\n",
+    "bus_stop4 = (7, -2)\n",
+    "\n",
+    "stops = []\n",
+    "\n",
+    "stops.append(bus_stop1)\n",
+    "stops.append(bus_stop2)\n",
+    "stops.append(bus_stop3)\n",
+    "stops.append(bus_stop4)\n",
+    "print(\"Bus stops :\", stops)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of stops : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Calculate the number of stops.\n",
+    "\n",
+    "print(\"Number of stops :\", len(stops))"
+   ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 12, 10, 15]\n"
+     ]
+    }
+   ],
    "source": [
-    "#### 4. Calculate the average occupation. And the standard deviation."
+    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
+    "# Each item depends on the previous item in the list + in - out.\n",
+    "\n",
+    "bus_passengers = []\n",
+    "passengers = 0\n",
+    "for s in stops:\n",
+    "    passengers += sum(s)\n",
+    "    bus_passengers.append(passengers)\n",
+    "\n",
+    "print(bus_passengers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum occupation of the bus : 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Find the maximum occupation of the bus.\n",
+    "\n",
+    "print(\"Maximum occupation of the bus :\", max(bus_passengers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average occupation on the bus : 10.5\n",
+      "Standard deviation : 3.640054944640259\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Calculate the average occupation. And the standard deviation.\n",
+    "\n",
+    "import statistics\n",
+    "import numpy as np\n",
+    "\n",
+    "print(\"Average occupation on the bus :\", (sum(bus_passengers)/len(bus_passengers)))\n",
+    "\n",
+    "print(\"Standard deviation :\", np.std(bus_passengers))\n"
    ]
   },
   {
@@ -117,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
